--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom -->
     <link href="css/custom.css" rel="stylesheet">
@@ -19,36 +20,35 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
-    <!-- Indicates a successful or positive action -->
-    <button type="button" class="btn btn-success">Success</button>
-
-
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-      Launch demo modal
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-          </div>
-          <div class="modal-body">
-            ...
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
+    <div class = "container">
+      <div class = "row">
+        <div class="jumbotron col-md-12">
+          <h1>This is a demo!</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec ullamcorper elit. In posuere purus a magna malesuada, non pellentesque lectus aliquam. Duis id purus molestie, pretium nisl vel, euismod nisl. Cras ac ligula ornare, ullamcorper leo vel, ullamcorper ipsum. Proin scelerisque purus vel magna finibus fringilla. Nam ornare leo tempor erat commodo placerat. Sed dapibus, odio a laoreet porttitor, tellus sapien laoreet risus, eu mollis turpis lorem viverra nisi. Aenean eleifend purus dolor, sed consequat purus imperdiet eget.</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Launch demo modal</a></p>
         </div>
       </div>
-    </div>
 
+  <div class = "row">
+    <div class = "col-sm-3">
+        <a href="http://placehold.it/550x350" class="thumbnail">
+          <img src="http://placehold.it/550x350" alt="thing1">
+        </a>
+    </div>
+    <div class = "col-sm-3">
+      
+        <a href="http://placehold.it/550x350" class="thumbnail">
+          <img src="http://placehold.it/350x150" alt="thing1">
+        </a>
+    </div>
+        <div class = "col-sm-3">
+        <a href="http://placehold.it/550x350" class="thumbnail">
+          <img src="http://placehold.it/350x150" alt="thing1">
+        </a>
+    </div>
+  </div>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
